Dockerfile updated to copy nginx.conf (for tcp configuration)

--- a/mainline/debian/Dockerfile
+++ b/mainline/debian/Dockerfile
@@ -101,6 +101,8 @@ RUN set -x \
 # create a docker-entrypoint.d directory
     && mkdir /docker-entrypoint.d
 
+COPY /tcp/nginx.conf /etc/nginx/nginx.conf
+
 COPY docker-entrypoint.sh /
 COPY 10-listen-on-ipv6-by-default.sh /docker-entrypoint.d
 COPY 20-envsubst-on-templates.sh /docker-entrypoint.d
